# taishizhinengyuce

./: .dockerignore  .env.example  .env.local  .gitignore  Dockerfile  Ollama启动指南.md  README.md  README_本地模型.md  config.env.example  docker-compose.yml  fix_tool_runtime.py  pyproject.toml  requirements.txt  requirements_simple.txt  requirements_windows.txt  start.bat  start.sh  test_agent.py  test_final.py  test_glm.py  修复说明.txt  天气信息显示-快速参考.md  天气信息显示重新设计说明.md  天气信息自然风格调整说明.md  天气卡片修改按钮修复说明.md  天气卡片恢复总结.md  天气卡片点击事件修复说明.md  天气卡片点击事件最终修复说明.md  本地模型快速开始.md  本地模型部署指南.md  本地模型配置完成说明.md  本地模型配置总结.md  本次会话修改文件清单.md  界面布局优化-快速参考.md  界面布局优化说明.md  统计卡片高度优化说明.md  连接本地Ollama-快速参考.md  连接本地Ollama指南.md
assets/: data_sources.json  decision_config.json  holiday_calendar.json  plan_workload_test_data.json  prediction_config.json  schedule_config.json
config/: agent_llm_config.json  agent_llm_config_docker.json
docs/: API_KEY_GUIDE.md  ARCHITECTURE.md  DATABASE_TABLES.md  DEPLOYMENT.md  MySQL到Oracle语法转换参考.md  NON_PLAN_WORKLOAD_GUIDE.md  PLAN_WORKLOAD_GUIDE.md  QUICKSTART.md  STEP_BY_STEP.md  VSCODE_RUN_GUIDE.md  弹窗样式优化说明.md  数据库与模型接入指南.md
frontend/: README.md  dispatch-embed.html  dispatchembed.html  index.html  test-weather-card.html  test.html
scripts/: check_current_layout.py  check_natural_weather_style.py  create_non_plan_workload_tables.sql  create_plan_workload_tables.sql  diagnose_ollama.py  diagnose_weather_card.py  execute_plan_workload_sql.py  generate_plan_workload_test_data.py  import_all.py  import_seed.py  knowledge_import.py  load_seed.py  quick_start.sh  (+16 more)
(+59 files in other folders)
