[project]
name = "projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    # 核心依赖
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # 数据处理
    "pandas>=2.0.0",
    "numpy>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    # 时序预测
    "prophet>=1.1.5",
    "xgboost>=2.0.0",
    # PyTorch（可选）
    "torch>=2.0.0,<3.0.0",
    # 其他依赖
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "pillow>=10.0.0",
    # 数据库
    "psycopg>=3.0.0",
    # Coze 依赖
    "cozeloop==0.1.25",
    # 图像处理
    "opencv-python-headless>=4.10.0",
    "python-pptx",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
